# agentao

./: .env.example  .gitignore  AGENTAO.md  CLAUDE.md  README.md  README.zh.md  main.py  pyproject.toml  run.sh
agentao/: __init__.py  agent.py  cli.py  context_manager.py  permissions.py  session.py  tool_runner.py
agentao/agents/: __init__.py  manager.py  tools.py
agentao/llm/: client.py
agentao/mcp/: __init__.py  client.py  config.py  tool.py
agentao/skills/: manager.py
agentao/tools/: agents.py  memory.py  shell.py  skill.py  web.py
chatagent/: __init__.py  agent.py  cli.py  context_manager.py
chatagent/agents/: __init__.py  manager.py  tools.py
chatagent/llm/: client.py
chatagent/tools/: __init__.py  ask_user.py  base.py  file_ops.py  memory.py  search.py  shell.py  web.py
docs/: DEMO.md  LOGGING.md  MODEL_SWITCHING.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SKILLS_GUIDE.md
docs/dev-notes/: FIXES_SUMMARY.md  MULTI_TURN_FIX.md  PROJECT_SUMMARY.md  SESSION_SUMMARY.md  STRUCTURE.md
docs/features/: CHATAGENT_MD_FEATURE.md  DATE_CONTEXT_FEATURE.md  TOOL_CONFIRMATION_FEATURE.md  funds-data-cleaning-parallelism.md  (+2 more)
tests/: test_agentao_md.py  test_clear_resets_confirm.py  test_context_manager.py  test_date_in_prompt.py  test_imports.py  test_logging.py  test_memory_management.py  test_menu_confirmation.py  test_model_command.py  test_multi_turn.py  test_readchar_confirmation.py  test_reliability_prompt.py  test_skill_integration.py  test_skill_resources.py  test_skills.py  test_skills_prompt.py  test_status_pause.py  test_tool_confirmation.py
(+15 files in other folders)
