[project]
name = "chatagent"
version = "0.1.2"
description = "A CLI chat agent with tools and skills support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "pygments>=2.16.0",
    "readchar>=4.2.1",
    "prompt-toolkit>=3.0.52",
    "pymupdf>=1.27.1",
    "pdfplumber>=0.11.9",
    "pycryptodome>=3.23.0",
    "pandas>=3.0.1",
    "openpyxl>=3.1.5",
    "pyyaml>=6.0.3",
    "mcp>=1.26.0",
]

[project.optional-dependencies]
crawl4ai = ["crawl4ai>=0.8.0"]

[project.scripts]
chatagent = "chatagent.cli:entrypoint"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
